[gd_scene load_steps=7 format=3 uid="uid://bbqpwi87i5btj"]

[ext_resource type="Texture2D" uid="uid://o8uhgibtea7g" path="res://art/Explosion02_Frame_06_png_processed.png" id="1_0bqhr"]
[ext_resource type="Script" uid="uid://1lar41d21qli" path="res://turret_shot.gd" id="1_h5g2u"]
[ext_resource type="Texture2D" uid="uid://76kcqnm5kbtr" path="res://art/Explosion02_Frame_07_png_processed.png" id="2_h5g2u"]
[ext_resource type="Texture2D" uid="uid://bmyxyq4ukgy37" path="res://art/Explosion02_Frame_08_png_processed.png" id="3_dxk3b"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pf6kt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0bqhr")
}, {
"duration": 1.0,
"texture": ExtResource("2_h5g2u")
}, {
"duration": 1.0,
"texture": ExtResource("3_dxk3b")
}, {
"duration": 1.0,
"texture": ExtResource("2_h5g2u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0bqhr"]
radius = 19.0263

[node name="TurretShot" type="Area2D"]
script = ExtResource("1_h5g2u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pf6kt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0bqhr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
